fix: align top of playlist with top of video

--- a/pyytsync/sync/static/style.css
+++ b/pyytsync/sync/static/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 #sidebar-wrapper .sidebar-heading {
-    padding: 0.875rem 1.25rem;
+    padding: 0.875rem 1.25rem 0.0rem;
     font-size: 1.2rem;
 }
 
